// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Account renders correctly 1`] = `
<div
  className="sc-gzVnrw keaXww"
>
  <div
    className="sc-bdVaJa cRiSdV"
  >
    <div
      className="sc-bwzfXH iRxXYd"
    />
  </div>
  <div
    className="sc-bZQynM hGJUYQ"
  >
    <div
      className="sc-ifAKCX cugYHd"
    >
      sync. Account
    </div>
    <div
      className="sc-EHOje hduhHE"
    >
      00175579 | 62-22-07
    </div>
    <div
      className="sc-bxivhb fzKxNB"
    >
      £
      1,415.14
    </div>
  </div>
</div>
`;

exports[`Doesn´t show the button or amount 1`] = `
<div
  className="sc-gzVnrw keaXww"
>
  <div
    className="sc-bdVaJa cRiSdV"
  >
    <div
      className="sc-bwzfXH iRxXYd"
    />
  </div>
  <div
    className="sc-bZQynM hGJUYQ"
  >
    <div
      className="sc-ifAKCX cugYHd"
    >
      sync. Account
    </div>
    <div
      className="sc-EHOje hduhHE"
    >
      00175579 | 62-22-07
    </div>
  </div>
</div>
`;
